Updated InfoDisplay with Velocity

--- a/Data/Sys/InfoDisplay/RMCK01.ini
+++ b/Data/Sys/InfoDisplay/RMCK01.ini
@@ -1,14 +1,37 @@
-Line1="===== Inputs =====
-X: %d1b | Y: %d1b"
-Arg1=0x9ABD70 + 0xC + 0x0 + 0x48 + 0x38;
-Arg2=0x9ABD70 + 0xC + 0x0 + 0x48 + 0x39;
+Line1="===== Velocity =====
+Internal X: %f4b | Y: %f4b | Z: %f4b
+External X: %f4b | Y: %f4b | Z: %f4b
+Moving Road X: %f4b | Y: %f4b | Z: %f4b
+Moving Water X: %f4b | Y: %f4b | Z: %f4b"
+Arg1=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0x14C;
+Arg2=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0x150;
+Arg3=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0x154;
+Arg4=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0x74;
+Arg5=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0x78;
+Arg6=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0x7C;
+Arg7=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0xB0;
+Arg8=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0xB4;
+Arg9=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0xB8;
+Arg10=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0xC8;
+Arg11=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0xCC;
+Arg12=0x9AFF38 + 0x20 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0xD0;
 End Line
 
 Line2=""
 Arg1=nil
 End Line
 
-Line3="===== Position =====
+Line3="===== Inputs =====
+X: %d1b | Y: %d1b"
+Arg1=0x9ABD70 + 0xC + 0x0 + 0x48 + 0x38;
+Arg2=0x9ABD70 + 0xC + 0x0 + 0x48 + 0x39;
+End Line
+
+Line4=""
+Arg1=nil
+End Line
+
+Line5="===== Position =====
 X: %f4b
 Y: %f4b
 Z: %f4b"
@@ -17,11 +40,11 @@ Arg2=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0x6C;
 Arg3=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x0 + 0x8 + 0x90 + 0x4 + 0x70;
 End Line
 
-Line4=""
+Line6=""
 Arg1=nil
 End Line
 
-Line5="===== Checkpoint =====
+Line7="===== Checkpoint =====
 CP: %d2b
 KCP:  %d1b
 Lap Completion:  %f4b
@@ -32,11 +55,11 @@ Arg3=0x9ABD70 + 0xC + 0x0 + 0x1C;
 Arg4=0x9ABD70 + 0xC + 0x0 + 0xC;
 End Line
 
-Line6=""
+Line8=""
 Arg1=nil;
 End Line
 
-Line7="===== Misc =====
+Line9="===== Misc =====
 Base Vel: %f4b | Max: %f4b
 MT Charge: %d2b (%d2b)
 SSMT Charge: %d2b
