--- a/Data/Sys/InfoDisplay/RMCK01.ini
+++ b/Data/Sys/InfoDisplay/RMCK01.ini
@@ -12,14 +12,13 @@ Arg1=nil
 End Line
 
 Line3="===== Checkpoint =====
-CP: %d2b
-KCP:  %d1b
 Lap Completion:  %f4b
-Race Completion:  %f4b"
-Arg1=0x9ABD70 + 0xC + 0x0 + 0xA;
-Arg2=0x9ABD70 + 0xC + 0x0 + 0x27;
-Arg3=0x9ABD70 + 0xC + 0x0 + 0x1C;
-Arg4=0x9ABD70 + 0xC + 0x0 + 0xC;
+Race Completion:  %f4b
+CP: %d2b | KCP:  %d1b"
+Arg1=0x9ABD70 + 0xC + 0x0 + 0x1C;
+Arg2=0x9ABD70 + 0xC + 0x0 + 0xC;
+Arg3=0x9ABD70 + 0xC + 0x0 + 0xA;
+Arg4=0x9ABD70 + 0xC + 0x0 + 0x27;
 End Line
 
 Line4=""
@@ -28,21 +27,23 @@ End Line
 
 Line5="===== Misc =====
 Base Vel: %f4b | Max: %f4b
-MT Charge: %d2b (%d2b)
-SSMT Charge: %d2b
-Airtime: %d2b
-MT Boost: %d2b
-Trick Boost: %d2b
-Mushroom Boost:  %d2b"
+MT Charge: %d2b (%d2b) | SSMT Charge: %d2b
+MT: %d2b | Trick: %d2b | Mushroom:  %d2b
+Trick CD: %d2b | Wheelie CD: %d2b | Wheelie: %d4b
+Airtime: %d2b | OOB: %d2b"
 Arg1=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x20;
 Arg2=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x18;
 Arg3=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0xFE;
 Arg4=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x100;
 Arg5=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x14C;
-Arg6=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x21A;
-Arg7=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x10C;
-Arg8=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x114;
-Arg9=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x110;
+Arg6=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x10C;
+Arg7=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x114;
+Arg8=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x110;
+Arg9=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x21A;
+Arg10=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x258 + 0x38;
+Arg11=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x2b6;
+Arg12=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x2A8;
+Arg13=0x9AFF38 + 0xC + 0x10 + 0x0 + 0x10 + 0x18 + 0x4a;
 End Line
 
 Line6=""
