--- a/Data/Sys/InfoDisplay/RMCJ01.ini
+++ b/Data/Sys/InfoDisplay/RMCJ01.ini
@@ -30,7 +30,7 @@ Base Vel: %f4b | Max: %f4b
 MT Charge: %d2b (%d2b) | SSMT Charge: %d2b
 MT: %d2b | Trick: %d2b | Mushroom:  %d2b
 Trick CD: %d2b | Wheelie CD: %d2b | Wheelie: %d4b
-Airtime: %d2b | OOB: %d2b"
+Airtime: %d4b | OOB: %d2b"
 Arg1=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x20;
 Arg2=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x18;
 Arg3=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0xFE;
@@ -39,10 +39,10 @@ Arg5=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x14C;
 Arg6=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x10C;
 Arg7=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x114;
 Arg8=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x110;
-Arg9=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x21A;
-Arg10=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x258 + 0x38;
-Arg11=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x2b6;
-Arg12=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x2A8;
+Arg9=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x258 + 0x38;
+Arg10=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x2b6;
+Arg11=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x2A8;
+Arg12=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x10 + 0x218;
 Arg13=0x9C0958 + 0xC + 0x10 + 0x0 + 0x10 + 0x18 + 0x4a;
 End Line
 
