--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,7 @@ option(TRY_X11 "Enables X11 Support" ON)
 option(USE_SHARED_ENET "Use shared libenet if found rather than Dolphin's soon-to-compatibly-diverge version" OFF)
 option(USE_SHARED_GTEST "Use shared gtest library if found" OFF)
 option(USE_UPNP "Enables UPnP port mapping support" ON)
-option(DISABLE_WX "Disable wxWidgets (use Qt or CLI interface)" OFF)
-option(ENABLE_QT2 "Enable Qt2 (use the other experimental Qt interface)" OFF)
+option(DISABLE_WX "Disable wxWidgets (use CLI interface)" OFF)
 option(ENABLE_PCH "Use PCH to speed up compilation" ON)
 option(ENABLE_LTO "Enables Link Time Optimization" OFF)
 option(ENABLE_GENERIC "Enables generic build that should run on any little-endian host" OFF)
@@ -412,7 +411,6 @@ if(ANDROID)
 	set(USE_UPNP 0)
 	set(USE_EGL 1)
 	set(DISABLE_WX 1)
-	set(ENABLE_QT2 0)
 
 	# We are cross compiling, search only the toolchain for libraries and includes
 	SET(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
@@ -426,7 +424,6 @@ if(ENABLE_HEADLESS)
 	set(USE_X11 0)
 	set(USE_EGL 1)
 	set(DISABLE_WX 1)
-	set(ENABLE_QT2 0)
 	add_definitions(-DUSE_HEADLESS)
 endif()
 
@@ -830,11 +827,6 @@ if (OPENSLES_LIBRARIES AND OPENSLES_INCLUDE_DIR)
 	add_definitions(-DHAVE_OPENSLES=1)
 	include_directories(${OPENSLES_INCLUDE_DIR})
 	message("OpenSLES found, enabling OpenSLES sound backend")
-endif()
-
-if(ENABLE_QT2)
-	find_package(Qt5Widgets REQUIRED)
-	message("Found Qt version ${Qt5Core_VERSION}, enabling the Qt backend")
 endif()
 
 if(NOT DISABLE_WX)
