--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build:
-    runs-on: [windows-latest]
+    runs-on: [x86_64, amd64]
     steps:
     - uses: actions/checkout@v3
 
