--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,7 +189,7 @@ if(ENABLE_GENERIC)
 elseif(_ARCH_64 AND (
 	${CMAKE_SYSTEM_PROCESSOR} MATCHES "^x86" OR
 	${CMAKE_SYSTEM_PROCESSOR} MATCHES "i.86" OR
-	${CMAKE_SYSTEM_PROCESSOR} MATCHES "amd64" OR
+	${CMAKE_SYSTEM_PROCESSOR} MATCHES "AMD64" OR
 	APPLE
 ))
 	set(_M_X86 1)
